# HADES

./: .gitignore  .mcp.json  README.md  composer.json  pyproject.toml
.hermes/: config.yaml
Acheron/arango-proxies/: ARCHIVED.md  proxy_common.go  rw_proxy.go
Acheron/conveyance-framework/docs/: arango_phase4_summary.md  core_readme_original.md
Acheron/tests-legacy/benchmarks/: conveyance_logger.py
Acheron/tests-legacy/workflows/: test_workflow_arxiv_single_pdf.py
core/: README.md  __init__.py
core/analyzers/: __init__.py  lsp_client.py  python_ast_extractor.py  python_edge_resolver.py  rust_analyzer_client.py  rust_edge_resolver.py  rust_symbol_extractor.py
core/cli/: README.md  __init__.py  agent_templates.py  config.py  decorators.py  destructive.py  main.py  output.py
core/cli/commands/: abstract.py  arxiv.py  codebase.py  database.py  db.py  embedding.py  extract.py  graph_embed.py  ingest.py  orient.py  persephone.py  query.py  smell.py  status.py  structural_fusion.py  sync.py
core/config/: README.md  __init__.py  arxiv_repository.env  config_base.py  config_loader.py  config_manager.py  hades.yaml
core/config/embedders/: default.yaml  jina_v4.yaml
core/config/workflows/: arxiv_metadata_default.yaml
core/database/: __init__.py  codebase_collections.py  collections.py  database_factory.py  import_resolver.py  keys.py  nl_graph_materialize.py  nl_graph_schema.py  schemas.py
core/database/arango/: README.md  __init__.py  backend.py  memory_client.py  optimized_client.py  php_unix_bridge.php
core/embedders/: README.md  __init__.py  embedders_base.py  embedders_factory.py  embedders_jina.py
core/extractors/: README.md  __init__.py  extractor_factory.py  extractors_base.py  extractors_code.py  extractors_docling.py  extractors_latex.py  extractors_markdown.py  extractors_robust.py  extractors_treesitter.py
core/graph/: __init__.py  loader.py  model.py  train.py
core/logging/: __init__.py  logging.py
core/mcp/: __init__.py  server.py
core/persephone/: __init__.py  collections.py  context.py  handoffs.py  logging.py  models.py  sessions.py  tasks.py  workflow.py
core/processors/: __init__.py  batch.py  code_processor.py  document_processor.py
core/services/: __init__.py  database_client.py  embedder_client.py  embedder_service.py
core/tools/: __init__.py  embed.py  extract.py  store.py
core/workflows/: README.md  __init__.py  workflow_base.py  workflow_pdf.py
docs/: hades-burn-vision.md  hecate-prompt-nlm-embedder.md  mcp-server-plan.md  nestedlearning-migration-report.md  rgcn-graphsage-plan.md  rust-analyzer-integration-report.md
docs/deploy/: arango_proxy_systemd.md
docs/issues/: 46-remove-sentence-transformers.md
scripts/: install-embedder-service.sh
setup/: php_arango_setup.md  setup_database.config.example  setup_database.sh  setup_local.sh  setup_private_repo.sh  setup_python_env.sh  system_requirements.md  verify_environment.py  verify_storage.py
systemd/: hades-embedder.service
tests/: conftest.py
tests/benchmarks/: arango_connection_test.py
tests/core/: test_batch_processor.py  test_code_processor.py  test_codebase_rust_integration.py  test_collections.py  test_factories.py  test_keys.py  test_orient.py  test_persephone_logging.py  test_schemas.py  test_tool_embed.py  test_tool_extract.py  test_tool_store.py
tests/e2e/: __init__.py  conftest.py  test_document_pipeline.py  test_embedding_flow.py  test_extraction_flow.py  test_storage_integration.py
tests/functional/: __init__.py  batch_process.py  process_arxiv_pdf.py
tests/integration/: __init__.py  conftest.py  test_config_integration.py  test_database.py  test_embedders.py  test_extractors.py  test_pipeline.py  test_processors.py  test_state_manager.py  test_storage.py  test_workflows.py
(+81 files in other folders)
